<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.itaigafni.finalproject.InfoActivity"
    android:orientation="vertical"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="264dp"
        android:layout_weight="2"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/age"
            android:textColor="@color/textViewColor"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/editAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textSize="20dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/height"
            android:textColor="@color/textViewColor"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/editHeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textSize="20dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/weight"
            android:textColor="@color/textViewColor"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/editWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:textSize="20dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:textColor="@color/textViewColor"
            android:textSize="20dp" />

        <Spinner
            android:id="@+id/spinGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </Spinner>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/level_of_activity"
            android:textColor="@color/textViewColor"
            android:textSize="20dp" />

        <Spinner
            android:id="@+id/spinActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbarSize="20dp">

        </Spinner>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/goal"
            android:textColor="@color/textViewColor"
            android:textSize="20dp" />

        <Spinner
            android:id="@+id/spinGoal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </Spinner>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center">

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="wrap_content"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:textColor="@color/textColor"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:textSize="20dp"/>
    </LinearLayout>


</LinearLayout>
